force-app/main/default/objects/Case_Notification__c/Case_Notification__c.object-meta.xml
<CustomObject>
    <label>Case Notification</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Case Notifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>