force-app/main/default/objects/Case_Notification__c/fields/Accept_Decline_Case__c.field-meta.xml
<CustomField>
    <fullName>Accept_Decline_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reminder sent to Defendant handler after 5 days every 24 hours.</description>
    <inlineHelpText>Reminder sent to Defendant handler after 5 days every 24 hours.</inlineHelpText>
    <label>DH not responding</label>
    <type>Checkbox</type>
</CustomField>