force-app/main/default/objects/Case_Notification__c/fields/Accept_Decline_Case_No_Response__c.field-meta.xml
<CustomField>
    <fullName>Accept_Decline_Case_No_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notification sent to Market Maker if no response within 8 days.</description>
    <inlineHelpText>Notification sent to Market Maker if no response within 8 days.</inlineHelpText>
    <label>DH not responding (Escalated)</label>
    <type>Checkbox</type>
</CustomField>