force-app/main/default/objects/Case_Notification__c/fields/Accept_Decline_items_for_arbitration_sub__c.field-meta.xml
<CustomField>
    <fullName>Accept_Decline_items_for_arbitration_sub__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reminder notification every 24 hours if no response.</description>
    <inlineHelpText>Reminder notification every 24 hours if no response.</inlineHelpText>
    <label>Accept/Decline items for arbitration/sub</label>
    <type>Checkbox</type>
</CustomField>