force-app/main/default/objects/Case_Notification__c/fields/Appoint_Facilitator_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Appoint_Facilitator_to_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notification sent to Market Maker every 24 hours.</description>
    <inlineHelpText>Notification sent to Market Maker every 24 hours.</inlineHelpText>
    <label>Facilitator required</label>
    <type>Checkbox</type>
</CustomField>