force-app/main/default/objects/Case_Notification__c/fields/Arbitrator_Declines_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Declines_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbitrator declined invitation</label>
    <type>Checkbox</type>
</CustomField>