force-app/main/default/objects/Case_Notification__c/fields/Arbitrator_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbitrator invited</label>
    <type>Checkbox</type>
</CustomField>