force-app/main/default/objects/Case_Notification__c/fields/Arbitrator_Invitation_No_Response__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Invitation_No_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbitrator not responding to invitation</label>
    <type>Checkbox</type>
</CustomField>