force-app/main/default/objects/Case_Notification__c/fields/Arbitrator_Submits_Award__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Submits_Award__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbitrator Submits Award</label>
    <type>Checkbox</type>
</CustomField>