force-app/main/default/objects/Case_Notification__c/fields/Assign_Case_to_Team__c.field-meta.xml
<CustomField>
    <fullName>Assign_Case_to_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reminder sent to Defendant supervisor every 24 hours.</description>
    <inlineHelpText>Reminder sent to Defendant supervisor every 24 hours.</inlineHelpText>
    <label>Assign Case to Team</label>
    <type>Checkbox</type>
</CustomField>