force-app/main/default/objects/Case_Notification__c/fields/Assign_Case_to_Team_No_Response__c.field-meta.xml
<CustomField>
    <fullName>Assign_Case_to_Team_No_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notification sent to Market Maker that there has been no response from supervisor within 3 days.</description>
    <inlineHelpText>Notification sent to Market Maker that there has been no response from supervisor within 3 days.</inlineHelpText>
    <label>DS not responding (Escalated)</label>
    <type>Checkbox</type>
</CustomField>