force-app/main/default/objects/Case_Notification__c/fields/Bilateral_Referral_Days__c.field-meta.xml
<CustomField>
    <fullName>Bilateral_Referral_Days__c</fullName>
    <formula>Case__r.Protocol__r.Bilateral_referral_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bilateral Referral Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>