force-app/main/default/objects/Case_Notification__c/fields/Bilateral_Referral_started__c.field-meta.xml
<CustomField>
    <fullName>Bilateral_Referral_started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bilateral Referral started</label>
    <type>Checkbox</type>
</CustomField>