force-app/main/default/objects/Case_Notification__c/fields/Case_Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Member_Email__c</fullName>
    <label>Case Member Email</label>
    <type>Email</type>
</CustomField>