force-app/main/default/objects/Case_Notification__c/fields/Case_Progresses_to_Finalisation__c.field-meta.xml
<CustomField>
    <fullName>Case_Progresses_to_Finalisation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case closed</label>
    <type>Checkbox</type>
</CustomField>