force-app/main/default/objects/Case_Notification__c/fields/Case_Progresses_to_Unilateral_Referral__c.field-meta.xml
<CustomField>
    <fullName>Case_Progresses_to_Unilateral_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unilateral Referral started</label>
    <type>Checkbox</type>
</CustomField>