force-app/main/default/objects/Case_Notification__c/fields/Case_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Role__c</fullName>
    <label>Case Role</label>
    <length>64</length>
    <type>Text</type>
</CustomField>