force-app/main/default/objects/Case_Notification__c/fields/Claimant_Firm__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Firm__c</fullName>
    <formula>Case__r.Claimant_Firm_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant Firm</label>
    <type>Text</type>
</CustomField>