force-app/main/default/objects/Case_Notification__c/fields/Claimant_Has_Not_Confirmed_SOL_Completio__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Has_Not_Confirmed_SOL_Completio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CH not concluding</label>
    <type>Checkbox</type>
</CustomField>