force-app/main/default/objects/Case_Notification__c/fields/Claimant_Refers_Items_To_Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Refers_Items_To_Arbitration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CH submitted referrals</label>
    <type>Checkbox</type>
</CustomField>