force-app/main/default/objects/Case_Notification__c/fields/Defendant_Case_Handler_Accepts_Case__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Case_Handler_Accepts_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DH accepted case</label>
    <type>Checkbox</type>
</CustomField>