force-app/main/default/objects/Case_Notification__c/fields/Defendant_Firm_Email__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_Email__c</fullName>
    <label>Defendant Firm Email</label>
    <type>Email</type>
</CustomField>