force-app/main/default/objects/Case_Notification__c/fields/Defendant_Firm_Notification__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case referred</label>
    <type>Checkbox</type>
</CustomField>