force-app/main/default/objects/Case_Notification__c/fields/Defendant_Firm_Team__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_Team__c</fullName>
    <formula>Case__r.Defendant_Firm_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Firm Team</label>
    <type>Text</type>
</CustomField>