force-app/main/default/objects/Case_Notification__c/fields/Defendant_handler_declines_the__c.field-meta.xml
<CustomField>
    <fullName>Defendant_handler_declines_the__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DH declined case</label>
    <type>Checkbox</type>
</CustomField>