force-app/main/default/objects/Case_Notification__c/fields/Defendant_Refers_Items_To_Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Refers_Items_To_Arbitration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DH submitted referrals</label>
    <type>Checkbox</type>
</CustomField>