force-app/main/default/objects/Case_Notification__c/fields/Defendant_Supervisor_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Supervisor_Reminder__c</fullName>
    <formula>Case__r.Protocol__r.Defendant_Supervisor_Reminder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Supervisor Reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>