force-app/main/default/objects/Case_Notification__c/fields/Defendant_Team_Added_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Team_Added_to_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DH Team assigned to case</label>
    <type>Checkbox</type>
</CustomField>