force-app/main/default/objects/Case_Notification__c/fields/Defendant_Team_Added_to_Case_Task__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Team_Added_to_Case_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defendant Firm (Task)</label>
    <type>Checkbox</type>
</CustomField>