force-app/main/default/objects/Case_Notification__c/fields/DH_not_responding_MM_Notification__c.field-meta.xml
<CustomField>
    <fullName>DH_not_responding_MM_Notification__c</fullName>
    <formula>Case__r.Protocol__r.DH_not_responding_MM_Notification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DH not responding - MM Notification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>