force-app/main/default/objects/Case_Notification__c/fields/Doc_Prep_closing_Claimant_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_closing_Claimant_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doc Prep window closing</label>
    <type>Checkbox</type>
</CustomField>