force-app/main/default/objects/Case_Notification__c/fields/DS_not_responding_MM_Notification__c.field-meta.xml
<CustomField>
    <fullName>DS_not_responding_MM_Notification__c</fullName>
    <formula>Case__r.Protocol__r.DS_not_responding_MM_Notification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS not responding - MM Notification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>