force-app/main/default/objects/Case_Notification__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>