force-app/main/default/objects/Case_Notification__c/fields/Facilitator_New_Case_Notification__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_New_Case_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facilitator assigned to case</label>
    <type>Checkbox</type>
</CustomField>