force-app/main/default/objects/Case_Notification__c/fields/Final_Award__c.field-meta.xml
<CustomField>
    <fullName>Final_Award__c</fullName>
    <label>Final Award</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>