force-app/main/default/objects/Case_Notification__c/fields/Final_offers_closing_Claimant_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Final_offers_closing_Claimant_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final offers closing - Claimant Reminder</label>
    <type>Checkbox</type>
</CustomField>