force-app/main/default/objects/Case_Notification__c/fields/Final_offers_closing_Defendant_Remind__c.field-meta.xml
<CustomField>
    <fullName>Final_offers_closing_Defendant_Remind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final offers closing - Defendant Remind</label>
    <type>Checkbox</type>
</CustomField>