force-app/main/default/objects/Case_Notification__c/fields/INAP_Community_URL__c.field-meta.xml
<CustomField>
    <fullName>INAP_Community_URL__c</fullName>
    <formula>$CustomMetadata.INAP_URL__mdt.INAP_Community_URL.URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INAP Community URL</label>
    <type>Text</type>
</CustomField>