force-app/main/default/objects/Case_Notification__c/fields/Invite_Arbitrator__c.field-meta.xml
<CustomField>
    <fullName>Invite_Arbitrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbitrator required</label>
    <type>Checkbox</type>
</CustomField>