force-app/main/default/objects/Case_Notification__c/fields/Items_Progress_to_Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Items_Progress_to_Arbitration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbitration started (Parties)</label>
    <type>Checkbox</type>
</CustomField>