force-app/main/default/objects/Case_Notification__c/fields/Items_progress_to_Final_Offers__c.field-meta.xml
<CustomField>
    <fullName>Items_progress_to_Final_Offers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Offers started</label>
    <type>Checkbox</type>
</CustomField>