force-app/main/default/objects/Case_Notification__c/fields/No_Arbitral_Award_Reminder__c.field-meta.xml
<CustomField>
    <fullName>No_Arbitral_Award_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbitrator not arbitrating</label>
    <type>Checkbox</type>
</CustomField>