force-app/main/default/objects/Case_Notification__c/fields/No_Arbitral_Award_Response_From_Arbitrat__c.field-meta.xml
<CustomField>
    <fullName>No_Arbitral_Award_Response_From_Arbitrat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbitrator not arbitrating (Escalated)</label>
    <type>Checkbox</type>
</CustomField>