force-app/main/default/objects/Case_Notification__c/fields/No_Referral__c.field-meta.xml
<CustomField>
    <fullName>No_Referral__c</fullName>
    <formula>Case__r.Protocol__r.No_referral_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Referral</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>