force-app/main/default/objects/Case_Notification__c/fields/Notify_Claimant_Handler_Case_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Notify_Claimant_Handler_Case_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notify the claimant case handler that the defendant firm accepted the case.</description>
    <label>Notify Claimant Handler - Case Accepted</label>
    <type>Checkbox</type>
</CustomField>