force-app/main/default/objects/Case_Notification__c/fields/Refer_Items_for_Arbitration_Submit__c.field-meta.xml
<CustomField>
    <fullName>Refer_Items_for_Arbitration_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notification sent to parties at 5 days before automated referral occurs.</description>
    <inlineHelpText>Notification sent to parties at 5 days before automated referral occurs.</inlineHelpText>
    <label>Refer Items for Arbitration/Submit</label>
    <type>Checkbox</type>
</CustomField>