force-app/main/default/objects/Case_Notification__c/fields/Schedule_of_Losses_is_All_Settled__c.field-meta.xml
<CustomField>
    <fullName>Schedule_of_Losses_is_All_Settled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All items resolved - settled)</label>
    <type>Checkbox</type>
</CustomField>