force-app/main/default/objects/Case_Notification__c/fields/Select_Submit_Documents_for_Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Select_Submit_Documents_for_Arbitration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reminder notification sent 2 days before the end of Doc Prep if no submissions yet.</description>
    <inlineHelpText>Reminder notification sent 2 days before the end of Doc Prep if no submissions yet.</inlineHelpText>
    <label>Doc Prep started</label>
    <type>Checkbox</type>
</CustomField>