force-app/main/default/objects/Case_Notification__c/fields/Submit_Arbitral_Award_Arbitrator__c.field-meta.xml
<CustomField>
    <fullName>Submit_Arbitral_Award_Arbitrator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reminder notification to arbitrator sent after 5 days</description>
    <inlineHelpText>Reminder notification to arbitrator sent after 5 days</inlineHelpText>
    <label>Arbitral award submitted</label>
    <type>Checkbox</type>
</CustomField>