force-app/main/default/objects/Case_Notification__c/fields/Submit_Arbitral_Award_Platform_Admin__c.field-meta.xml
<CustomField>
    <fullName>Submit_Arbitral_Award_Platform_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notification to platform admin after 10 days allocated to arbitral award step has expired - notify that new arbitrator appointment is needed.</description>
    <inlineHelpText>Notification to platform admin after 10 days allocated to arbitral award step has expired - notify that new arbitrator appointment is needed.</inlineHelpText>
    <label>Submit Arbitral Award - Platform Admin</label>
    <type>Checkbox</type>
</CustomField>