force-app/main/default/objects/Case_Notification__c/fields/Submit_Final_Offers_for_Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Submit_Final_Offers_for_Arbitration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reminder notification sent 2 days before the end of Final Offers</description>
    <inlineHelpText>Reminder notification sent 2 days before the end of Final Offers</inlineHelpText>
    <label>Final Offers window closing</label>
    <type>Checkbox</type>
</CustomField>