force-app/main/default/objects/Case_Notification__c/fields/Submit_to_Counterparty__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_Counterparty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reminder notification sent to both parties at 5 days before Negotiation expiration to notify of imminent expiration.</description>
    <inlineHelpText>Reminder notification sent to both parties at 5 days before Negotiation expiration to notify of imminent expiration.</inlineHelpText>
    <label>Submit to Counterparty</label>
    <type>Checkbox</type>
</CustomField>