force-app/main/default/objects/Case_Notification__c/fields/Total_Referral_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Referral_Days__c</fullName>
    <formula>No_Referral__c  + Bilateral_Referral_Days__c + Unilateral_Referral_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Referral Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>