force-app/main/default/objects/Case_Notification__c/fields/X5_Days_to_End_of_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>X5_Days_to_End_of_Negotiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negotiation window closing</label>
    <type>Checkbox</type>
</CustomField>