force-app/main/default/objects/Case_Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>User__c</columns>
    <columns>Defendant_Firm_Email__c</columns>
    <columns>Arbitrator_Invitation__c</columns>
    <columns>Arbitrator_Invitation_No_Response__c</columns>
    <columns>Invite_Arbitrator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>